ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rendezvous
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/issuer: "nginx"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  tls:
  - hosts:
    - rendezvous.myddns.me
    secretName: nginx-certificate
  rules:
  - host: rendezvous.myddns.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: react
            port:
              number: 80
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: nest
            port:
              number: 80
      - pathType: Prefix
        path: "/socket.io"
        backend:
          service:
            name: nest
            port:
              number: 81
      - pathType: Prefix
        path: "/auth"
        backend:
          service:
            name: keycloak
            port:
              number: 8080
